--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 			<div class="sp-slides">
 
 <div class="sp-slide">
-<img class="sp-image" alt="Melody Marks Lick Kenny Kong Ass White girl Asian guy Rimjob Porn" src="https://res.cloudinary.com/dzqkx5ghv/image/upload/v1590389658/Netlify/blank_sdm8oi.gif" data-src="https://res.cloudinary.com/dzqkx5ghv/image/upload/v1590155705/Netlify/Kenny_Kong_Melody_Marks_ctme1r.jpg" />
+img class="sp-image" alt="Ashley Lane Kenny Kong Rimjob Asslick AMWF" src="https://res.cloudinary.com/quantil-cdn/image/upload/v1590715973/WebP/blank_czwebv.webp" data-src="https://res.cloudinary.com/quantil-cdn/image/upload/v1593355604/Ashley_Lane_Kenny_Kong_Rimjob_Asslick_AMWF_hcmyfk.jpg" />
 </div>
 
 <div class="sp-slide">
@@ -352,8 +352,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 </div>
 
 <div class="sp-slide">
-<img class="sp-image" alt="White girl Ashley Lane Lick Ass Asian Man Kenny Kong" src="https://res.cloudinary.com/dzqkx5ghv/image/upload/v1590389658/Netlify/blank_sdm8oi.gif" data-src="https://res.cloudinary.com/dzqkx5ghv/image/upload/v1590155702/Netlify/White_Girl_Asian_Rimjob_jei4hu.jpg" />
-</div>
+<img class="sp-image" alt="Melody Marks Lick Kenny Kong Ass White girl Asian guy Rimjob Porn" src="https://res.cloudinary.com/quantil-cdn/image/upload/v1590715973/WebP/blank_czwebv.webp" data-src="https://res.cloudinary.com/quantil-cdn/image/upload/v1590714841/WebP/Kenny_Kong_Melody_Marks_vyjk3r.webp" /></div>
 
 <div class="sp-slide">
 <img class="sp-image" alt="White girl Danni Rivers AMWF Rimjob Asian Kenny Kong White girl" src="https://res.cloudinary.com/dzqkx5ghv/image/upload/v1590389658/Netlify/blank_sdm8oi.gif" data-src="https://res.cloudinary.com/dzqkx5ghv/image/upload/v1590155704/Netlify/White_girl_Kenny_Kong_Porn_zjmxwy.jpg" />
